<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/autor"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:text="@string/autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/nombre_app"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:text="@string/nombre_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/curso"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:text="@string/nombre_curso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/fecha"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:text="@string/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/version"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:text="@string/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>